src/xml/maestro/gramaticaMaestro.jj
options {
IGNORE_CASE = true;
STATIC = false;
    OUTPUTOKEN_DIRECTORY="C://Users//anick//Documents//NetBeansProjects//[Compi2]Proyecto1_201212859//FISQL//src//xml//maestro//";
}

PARSER_BEGIN(maestro)
package xml.maestro;
import java.util.ArrayList;
import archivos.maestro.*;
import archivos.db.database;

public class maestro {
  private ArrayList<master> lm= new ArrayList<master>();
  private String nombre,path;

  public static void main(String args[]) throws ParseException {
    maestro parser = new maestro(System.in);
    parser.S();
  }
}
PARSER_END(maestro)

TOKEN:
{   
   <TOKEN_DB_ABRE: ("<db>")> {System.out.println(image);}
  |<TOKEN_DB_CIERRA: ("</db>")> {System.out.println(image);}
  |<TOKEN_PATH_ABRE: ("<path>")> {System.out.println(image);}
  |<TOKEN_PATH_CIERRA: ("</path>")> {System.out.println(image);}
  |<TOKEN_NOMBRE_ABRE: ("<nombre>")> {System.out.println(image);}
  |<TOKEN_NOMBRE_CIERRA: ("</nombre>")> {System.out.println(image);}
  |<CADENA:"\"" (~["\""])*"\""> {System.out.println(image);}
}

SKIP: 
{
  " "
| "\n"
| "\r"
| "\t"
}

ArrayList<master> S():
{}
{
    LISTA_DB() {return lm;}
}

void LISTA_DB():
{}
{
    DB() (LISTA_DB())?
}

void DB():
{Token n,p;}
{
     <TOKEN_DB_ABRE>
     <TOKEN_NOMBRE_ABRE> n=<CADENA> <TOKEN_NOMBRE_CIERRA>
     <TOKEN_PATH_ABRE> p=<CADENA> <TOKEN_PATH_CIERRA>
     <TOKEN_DB_CIERRA>
     {
        nombre= n.image;
        nombre= nombre.substring(1, nombre.length()-1);
        path= p.image;
        path= path.substring(1, path.length()-1);
        ArrayList<database> data = new ArrayList<database>();
        master m= new master(nombre,path,data);
        lm.add(m);
     }
}
